oxiplate-derive/tests/broken/derive/non-string-literal.stderr
error: expected string literal
 --> tests/broken/derive/non-string-literal.rs:4:19
  |
4 | #[oxiplate_inline(19)]
  |                   ^^

error: Incorrect syntax for external template. Should look something like:
       #[oxiplate = "/path/to/template/from/templates/directory.txt.oxip"]
 --> tests/broken/derive/non-string-literal.rs:8:1
  |
8 | #[oxiplate = 19]
  | ^^^^^^^^^^^^^^^^
